Enable bevy performance optimizations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,9 @@ resolver = "2"
 members = [
     "phantom-of-scopa", "phantom-of-server", "scopa-lib",
 ]
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
