--- a/phantom-of-scopa/Cargo.toml
+++ b/phantom-of-scopa/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = "0.13.0"
+bevy_renet = "0.0.10"
+renet = "0.0.14"
