Implement in-game menu placeholder

--- a/phantom-of-scopa/Cargo.toml
+++ b/phantom-of-scopa/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 bevy = "0.13.0"
 bevy_renet = "0.0.10"
+bevy_simple_text_input = "0.5.0"
 rand = "0.8.5"
 renet = "0.0.14"
 scopa-lib = { path = "../scopa-lib/" }
+serde = { version = "1.0.197", features = ["derive"] }
+toml = "0.8.10"
